# lm-course

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test-code.yml
docs/: CONTRIBUTING.md  SETUP.md
lectures/01-introduction/: README.md
lectures/01-introduction/code/: attention_demo.ipynb
lectures/01-introduction/exercises/: exercise_1.md
lectures/01-introduction/exercises/solutions/: .gitkeep
lmcourse/: __init__.py
lmcourse/assignments/: __init__.py
lmcourse/datasets/: __init__.py
lmcourse/models/: __init__.py
lmcourse/utils/: __init__.py  visualization.py
resources/datasets/: .gitkeep
resources/papers/: .gitkeep
ttlm/: AGENTS.md  pyproject.toml
ttlm/assets/: argparse.sh  cleanup.sh
ttlm/experiments/: default.py  default_cpu.py  loader.py
ttlm/scripts/: colab_launcher.sh  pretrain.py  slurm_launcher.sh  vibecheck.py
ttlm/ttlm/: config.py  dist.py  engine.py  model.py  scheduler.py
ttlm/ttlm/dataset/: tinyshakespeare.py  tinystories.py
ttlm/ttlm/tokenizer/: ascii.py  base.py  bpe.py
