[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lm-course"
version = "0.1.0"
description = "Utilities and code for the Language Models Course"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10", 
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "datasets>=2.10.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
    "tqdm>=4.65.0",
    "wandb>=0.15.0",
    "tokenizers>=0.13.0",
    "scikit-learn>=1.3.0",
]

[dependency-groups]
dev = [
    "black>=23.0.0",
    "flake8>=6.0.0", 
    "pytest>=7.0.0",
    "nbval>=0.9.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lmcourse*"]

[tool.black]
line-length = 80
target-version = ['py39']

[tool.flake8]
max-line-length = 80
extend-ignore = ["E203", "W503"]
